# farmland-anomalies

./: .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  README.md  TSNE.ipynb  evaluation.py  prototype.py  requirements.txt  training.py  util.py
.cloud/: save_files_on_epoch.py
cc/: CMakeLists.txt  generate.cc  generate.h
data/: README.md  data-checkup.py  model.txt
evaluation/: TSNE.ipynb  display.py  logs.py  metrics.py
model/: architecture.py  blocks.py  light_network.py  loss.py  model_factory.py
model/complex/: architecture.py
model/light/: light_network.py
preprocessing/: augmented.py  dataset.py  distribution.py  generate.py  inspect.py
scripts/: constant.sh  expand.sh  fixcv.sh  preprocess.sh
testing/: diagrams.py  image.py  process.py  segment.py
